<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FF</string>
    <string name="change_text">Change text</string>
    <string name="enter_text">Enter text</string>
    <string name="convert">Convert</string>
    <string name="dollar">dollar</string>
    <string name="sonic">Sonic</string>
    <string name="tab1_fragment" tools:ignore="Typos">Tab1 Fragment</string>
    <string name="tab2_fragment">Tab2 Fragment</string>
    <string name="tab3_fragment">Tab3 Fragment</string>
    <string name="tab4_fragment">Tab4 Fragment</string>
    <string name="show_web_page">Show web page</string>
    <string name="enable_link">Enable link</string>
    <string name="launch_coroutine">Launch coroutine</string>
    <string name="get_time_from_service">Get time from service</string>
    <string name="send_message">Send message</string>
    <string-array name="fragments">
        <item>MotionEventFragment</item>
        <item>MotionLayoutFragment</item>
        <item>KotlinLayoutFragment</item>
        <item>CommonGesturesFragment</item>
        <item>CustomGestureFragment</item>
        <item>TabLayoutFragment</item>
        <item>CardDemoFragment</item>
        <item>CoroutineDemo</item>
        <item>FlowDemoFragment</item>
        <item>SharedFlowDemoFragment</item>
        <item>SqlDemoFragment</item>
        <item>RoomDemoFragment</item>
        <item>ViewPlayBackFragment</item>
        <item>PermissionDemoFragment</item>
    </string-array>
    <string-array name="android_bug_data">
        <item tools:ignore="Typos">android_image_1|BugDroid1|Jetpack Compose</item>
        <item>android_image_2|BugDroid2|Data Binding</item>
        <item>android_image_3|BugDroid3|View Binding</item>
        <item>android_image_4|BugDroid4|Live Data</item>
        <item>android_image_5|BugDroid5|View Model</item>
        <item>android_image_6|BugDroid6|Navigation Component</item>
        <item>android_image_7|BugDroid7|Material Design</item>
        <item>android_image_8|BugDroid8|Room Database</item>
    </string-array>
    <string name="start">Start</string>
    <string name="sqldemo">SqlDemo</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="fetch_all">Fetch all</string>
    <string name="update">Update</string>
    <string name="user_name_retroachievement">User name RetroAchievement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="game">Game</string>
    <string name="my_retro_achievement">My Retro Achievement</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="product_name">Product Name</string>
    <string name="produce_quantity">Product Quantity</string>
    <string name="product_name1">Product name: %s</string>
    <string name="product_quantity1">Product Quantity: %d</string>
    <string name="name_notify">Vui long nhap ten khi them san pham</string>
    <string name="quantity_notify">Vui long nhap so luong khi them san pham</string>
    <string name="select_product_notify">Vui long chon mot product</string>
    <string name="title_video">Forbidden Color by Ryuichi Sakamoto</string>
    <string name="enter_pip_mode">Enter pip mode</string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="notify_permission">Ứng dụng cần quyền ghi âm để hoạt động đúng cách. Vui lòng vào Cài đặt để cấp quyền.</string>
    <string name="attemp_to_request">Cấp quyền cần thiết</string>
    <string name="select_fragment">Enter fragment name</string>
</resources>