<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".fragment.FirstFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBar"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:value="10"
        android:valueFrom="0"
        android:valueTo="80"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/get_time_from_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/get_time_from_service"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send_message_to_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/send_message"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/change_text"
        android:textStyle="bold" />

</LinearLayout>